--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
   <form action="." method="post">
-    Input: <input type="text" name="number">
+    Input: <input id="number" type="text" name="number">
     <button type="submit">Submit</button>
   </form>
   Result: {{ result }}
